// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "admin",
      }
    }
    screenName={
      Array [
        "community",
        "challenges",
      ]
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <ChallengeFeed
      extraPadding={true}
      items={
        Array [
          Object {
            "data": Array [
              Object {
                "accepted_count": 5,
                "completed_count": 3,
                "creator_id": "person1",
                "end_date": "2018-10-06T14:13:21Z",
                "id": "1",
                "isPast": false,
                "organization_id": "123",
                "title": "Read \\"There and Back Again\\"",
              },
            ],
            "title": "",
          },
          Object {
            "data": Array [
              Object {
                "accepted_count": 5,
                "completed_count": 3,
                "creator_id": "person1",
                "end_date": "2018-07-06T14:13:21Z",
                "id": "2",
                "isPast": true,
                "organization_id": "123",
                "title": "Past Challenge",
              },
            ],
            "title": "Past Challenges",
          },
        ]
      }
      loadMoreItemsCallback={[Function]}
      organization={
        Object {
          "challengeItems": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-10-06T14:13:21Z",
              "id": "1",
              "organization_id": "123",
              "title": "Read \\"There and Back Again\\"",
            },
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-07-06T14:13:21Z",
              "id": "2",
              "organization_id": "123",
              "title": "Past Challenge",
            },
          ],
          "challengePagination": Object {
            "hasNextPage": true,
            "page": 1,
          },
          "id": "123",
        }
      }
      refreshCallback={[Function]}
      refreshing={false}
    />
  </View>
  <BottomButton
    onPress={[Function]}
    text="Create Challenge"
  />
</View>
`;

exports[`should render correctly for basic member 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "member",
      }
    }
    screenName={
      Array [
        "community",
        "challenges",
      ]
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <ChallengeFeed
      extraPadding={false}
      items={
        Array [
          Object {
            "data": Array [
              Object {
                "accepted_count": 5,
                "completed_count": 3,
                "creator_id": "person1",
                "end_date": "2018-10-06T14:13:21Z",
                "id": "1",
                "isPast": false,
                "organization_id": "123",
                "title": "Read \\"There and Back Again\\"",
              },
            ],
            "title": "",
          },
          Object {
            "data": Array [
              Object {
                "accepted_count": 5,
                "completed_count": 3,
                "creator_id": "person1",
                "end_date": "2018-07-06T14:13:21Z",
                "id": "2",
                "isPast": true,
                "organization_id": "123",
                "title": "Past Challenge",
              },
            ],
            "title": "Past Challenges",
          },
        ]
      }
      loadMoreItemsCallback={[Function]}
      organization={
        Object {
          "challengeItems": Array [
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-10-06T14:13:21Z",
              "id": "1",
              "organization_id": "123",
              "title": "Read \\"There and Back Again\\"",
            },
            Object {
              "accepted_count": 5,
              "completed_count": 3,
              "creator_id": "person1",
              "end_date": "2018-07-06T14:13:21Z",
              "id": "2",
              "organization_id": "123",
              "title": "Past Challenge",
            },
          ],
          "challengePagination": Object {
            "hasNextPage": true,
            "page": 1,
          },
          "id": "123",
        }
      }
      refreshCallback={[Function]}
      refreshing={false}
    />
  </View>
</View>
`;

exports[`should render empty correctly 1`] = `
<View
  flex={1}
>
  <Analytics
    screenContext={
      Object {
        "cru.permission-type": "admin",
      }
    }
    screenName={
      Array [
        "community",
        "challenges",
      ]
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
      }
    }
  >
    <ChallengeFeed
      extraPadding={true}
      items={
        Array [
          Object {
            "data": Array [],
            "title": "",
          },
        ]
      }
      loadMoreItemsCallback={[Function]}
      organization={
        Object {
          "challengeItems": Array [],
          "challengePagination": Object {
            "hasNextPage": true,
            "page": 1,
          },
          "id": "123",
        }
      }
      refreshCallback={[Function]}
      refreshing={false}
    />
  </View>
  <BottomButton
    onPress={[Function]}
    text="Create Challenge"
  />
</View>
`;
